Revert "Revert "Bug 474070 - Replace new Boolean with Boolean.valueOf""
This reverts commit c2a47e222eadf0edfc5af0f1f0918e41e4015b15.

Change-Id: I459446ae5f29ea06dcda26f9c86a758db71b0f05