@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  * 
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Alex Blewitt - Bug 474070 
  *******************************************************************************/
 package org.eclipse.help.ui;
 
@@ -173,7 +174,7 @@ public abstract class RootScopePage extends PreferencePage implements
 			if (child == masterButton)
 				continue;
 			if (!enabled) {
-				disabledStates.put(child, new Boolean(child.isEnabled()));
+				disabledStates.put(child, Boolean.valueOf(child.isEnabled()));
 				child.setEnabled(false);
 			} else {
 				Boolean savedState = (Boolean) disabledStates.get(child);
